# Miniproject_2

./: .gitignore  Allegro5Exception.cpp  Allegro5Exception.hpp  AudioHelper.cpp  AudioHelper.hpp  Bullet.cpp  Bullet.hpp  BulletFire.cpp  BulletFire.hpp  BulletIceCream.cpp  BulletIceCream.hpp  BulletPocky.cpp  BulletPocky.hpp  ButtonImage.cpp  ButtonImage.hpp  ButtonTurret.cpp  ButtonTurret.hpp  CMakeLists.txt  Collider.cpp  Collider.hpp  DirtyEffect.cpp  DirtyEffect.hpp  EBullet.cpp  EBullet.hpp  EBulletNerd.cpp  EBulletNerd.hpp  EffectDirty.cpp  EffectDirty.hpp  EffectExplosion.cpp  EffectExplosion.hpp  EffectFrozen.cpp  EffectFrozen.hpp  EffectShoot.cpp  EffectShoot.hpp  Enemy.cpp  Enemy.hpp  EnemyNerd.cpp  EnemyNerd.hpp  EnemyNormal.cpp  EnemyNormal.hpp  (+72 more)
information/: README.md
resources/: Format.md  enemy1 copy.txt  enemy1.txt
resources/images/play/: boss.psd
